--- a/gb/23/10/19/n14098566.md
+++ b/gb/23/10/19/n14098566.md
@@ -1,61 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>跑步时用鼻子或嘴巴呼吸比较好？ 专家释疑</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>跑步时应该用鼻子还是用嘴呼吸？ 专家释疑</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/10/id14098570-shutterstock_2031475334-600x400.jpg" />
 <h6>专家指出，在跑步时用鼻子呼吸比较好。图为一对在跑步的男女。（Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2023年10月19日讯】（大纪元记者陈俊村报导）你在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B7%91%E6%AD%A5.md#1">跑步</a>时是用<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BC%BB%E5%AD%90.md#1">鼻子</a>还是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%B4%E5%B7%B4.md#1">嘴巴</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%91%BC%E5%90%B8.md#1">呼吸</a>？有专家表示，在从事跑步等剧烈<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%90%E5%8A%A8.md#1">运动</a>时，用鼻子呼吸可能比较好，会让这些运动进行得比较容易。</p>
-<p>英国安格里亚鲁斯金大学（Anglia Ruskin University）的心肺<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%90%E5%8A%A8.md#1">运动</a>生理学副教授高登（Dan Gordon）与博士候选人法兰奇（Chloe French）和梅尔维尔（Jonathan Melville）在The Conversation网站撰文分析，在运动时用<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BC%BB%E5%AD%90.md#1">鼻子</a>与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%B4%E5%B7%B4.md#1">嘴巴</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%91%BC%E5%90%B8.md#1">呼吸</a>有何不同。</p>
+	<p>【大纪元2023年10月19日讯】（大纪元记者陈俊村报导）你在跑步时是用鼻子还是嘴巴呼吸？有专家表示，在从事跑步等剧烈运动时，用鼻子呼吸可能比较好，会让这些运动进行得比较容易。</p>
+<p>英国安格里亚鲁斯金大学（Anglia Ruskin University）的心肺运动生理学副教授高登（Dan Gordon）与博士候选人法兰奇（Chloe French）和梅尔维尔（Jonathan Melville）在The Conversation网站撰文分析，在运动时用鼻子与嘴巴呼吸有何不同。</p>
 <p>他们写道，呼吸是下意识的行为，人们平时不会去思考如何呼吸。但在运动时，大多数人会比较意识到呼吸的情况，有时候甚至会留意每一次的呼吸。</p>
 <p>当人们从事中低强度的运动时，例如骑自行车和散步，大多数人会用鼻子吸气，用嘴巴呼气。随着运动的强度越来越高，人们越会倾向于完全用嘴巴吸气和呼气。</p>
 <p>很多人认为，在从事剧烈运动时，用嘴巴呼吸最好，因为它可以吸入比较多的氧气供肌肉使用，毕竟嘴巴比鼻孔还大。但有证据显示，事实刚好跟这样的看法相反。在剧烈运动时用鼻子呼吸可能是最佳的方法。</p>
-<figure id="attachment_14098572" aria-describedby="caption-attachment-14098572" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14098572-shutterstock_776440840.jpg"><img class="size-large wp-image-14098572" src="https://i.epochtimes.com/assets/uploads/2023/10/id14098572-shutterstock_776440840-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14098572" class="wp-caption-text">一群人在跑马拉松。（Shutterstock）</figcaption></figure>
+<figure id="attachment_14098572" aria-describedby="caption-attachment-14098572" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14098572-shutterstock_776440840.jpg"><img decoding="async" class="size-large wp-image-14098572" src="https://i.epochtimes.com/assets/uploads/2023/10/id14098572-shutterstock_776440840-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14098572" class="wp-caption-text">一群人在跑马拉松。（Shutterstock）</figcaption></figure>
 <p><strong>为什么运动时用鼻子呼吸比较好？</strong></p>
 <p>这三位学者指出，有一系列的研究表明，在从事不同强度的运动时，用鼻子吸进的氧气会比用嘴巴吸进的少。这意味着在用鼻子呼吸时，身体可以在使用比较少的氧气的情况下从事等量的运动。</p>
 <p>这可能是一项优点，尤其是对耐力运动员而言。你可以把氧气想像成汽车使用的燃油。汽车行驶每单位距离所需的燃油越少，它的燃油经济（fuel economy）越好。同样地，运动时每一步所需要的氧气越少，身体使用的能量越少。这样你就能跑得比较远而不会很快感觉疲劳。</p>
 <p>研究还发现，除了吸入的氧气比较少之外，在运动时用鼻子呼吸的频率也比用嘴巴低。这似乎不太合乎逻辑。</p>
 <p>然而，在这里要了解的关键是，空气是从压力高的地方往压力低的地方流动。虽然鼻子吸入的氧气比嘴巴少，但它的压力比较高，所以可以让空气比较快流入呼吸系统内。其结果是氧气比较快传送到有需要的肌肉里，而每次呼吸也可以释放以较多的氧气。</p>
 <p>这可以解释为什么在从事相同的运动时，用鼻子或用嘴巴呼吸，心率并没有明显差异。换句话说，在运动时用鼻子呼吸，尽管吸入的氧气比较少，但心脏并不需要跳快一点让氧气传送到肌肉，也就是心脏不会承受额外的压力。</p>
-<figure id="attachment_12646898" aria-describedby="caption-attachment-12646898" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/breathing_1794890926.jpg"><img class="size-large wp-image-12646898" src="https://i.epochtimes.com/assets/uploads/2020/12/breathing_1794890926-600x400.jpg" alt="5种实用而有益的呼吸法，帮助你调节自律神经，减轻压力和焦虑等负面情绪。(Shutterstock)" width="600" b="400" /></a><figcaption id="caption-attachment-12646898" class="wp-caption-text">一名男子在呼吸。（Shutterstock）</figcaption></figure>
+<figure id="attachment_12646898" aria-describedby="caption-attachment-12646898" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/breathing_1794890926.jpg"><img decoding="async" class="size-large wp-image-12646898" src="https://i.epochtimes.com/assets/uploads/2020/12/breathing_1794890926-600x400.jpg" alt="5种实用而有益的呼吸法，帮助你调节自律神经，减轻压力和焦虑等负面情绪。(Shutterstock)" width="600" b="400" /></a><figcaption id="caption-attachment-12646898" class="wp-caption-text">一名男子在呼吸。（Shutterstock）</figcaption></figure>
 <p>研究人员说，用鼻子呼吸还有一个好处，就是会产生比较多的一氧化氮，这不但能使氧气更容易传送到肺部和肌肉，可能也可以预防空气中的病原体（例如病毒）对人体造成伤害。</p>
 <p>藉由降低血压和协助血液更容易流动，一氧化氮可以让氧气更容易传送到正在运动的肌肉里。</p>
 <p>至于需要瞬间爆发力的其他运动类型，例如举重，并没有明显的证据证明，用鼻子呼吸比较好。这些类型的运动依赖从其他来源吸取的能量，例如肌肉中储存的糖（葡萄糖），而不是氧气。但这些新陈代谢的过程仍需要氧气才能复原。</p>
-<p>这三位学者总结说，虽然在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B7%91%E6%AD%A5.md#1">跑步</a>时用鼻子呼吸比较好，但这需要练习一下。如果你在没有练习的情况下贸然行之，你可能会出现空气饥渴（air hunger）的现象，也就是在每次呼吸的最后还会留下一小部分二氧化碳，这会导致肺部换气过度和不舒服的感觉。</p>
-<p>他们说：“在运动时用鼻子呼吸可以是非常有效的。务必练习，让你的身体有时间调整，以避免受到伤害。”</p>
+<p>这三位学者总结说，虽然在跑步时用鼻子呼吸比较好，但这需要练习一下。如果你在没有练习的情况下贸然行之，你可能会出现空气饥渴（air hunger）的现象，也就是在每次呼吸的最后还会留下一小部分二氧化碳，这会导致肺部换气过度和不舒服的感觉。</p>
+<p>他们说：“在运动时用鼻子呼吸可以是非常有效的。务必练习，让你的身体有时间调整，以避免受到伤害。”◇</p>
 <p>责任编辑：茉莉</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/26/n12646480.md#1">很多人呼吸方式错了 5种超实用呼吸法 甩掉压力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/1/n12782801.md#1">2招呼吸运动锻炼“横隔膜”  终止胃食道逆流</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/27/n13191002.md#1">对的呼吸可减少身体发炎 练习6步骤疗愈身心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096986.md#1">古典音乐会的观众 心跳和呼吸会趋于同步？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/26/n12646480.md#1">很多人呼吸方式错了 5种超实用呼吸法 甩掉压力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/1/n12782801.md#1">2招呼吸运动锻炼“横隔膜”  终止胃食道逆流</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/27/n13191002.md#1">对的呼吸可减少身体发炎 练习6步骤疗愈身心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/17/n14096986.md#1">古典音乐会的观众 心跳和呼吸会趋于同步？</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/3/n9920294.md#1" target="_blank">肝癌不治自愈 澳洲华商经历的奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/8/n11098363.md#1" target="_blank">美国际宗教自由大使访港 促停止迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/11/n14092772.md#1">“天变”不是偶然的 有历史事验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094291.md#1">【未解之谜】朵洛莉丝催眠故事（2） 诺查丹玛斯的“魔镜”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/12/n14093429.md#1">【古道人生】继母欲夺长子钱财唯天理不容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14092136.md#1">【历史的瞬间】林语堂 信仰和传统的启蒙与回归</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14092085.md#1">后花园里的劳作和禅思玄想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097778.md#1">【晚间新闻】一带一路峰会 北京街头武警密布</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14098099.md#1">【时事金扫描】普京黑习近平？华春莹被打脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14098248.md#1">【菁英论坛】哈马斯火海战 中共测试抗美新战法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096863.md#1">中南海陷政经乱局 中共人大常委会议两看点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096625.md#1">分析：习一上台就推“一带一路” 原因何在</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096695.md#1">王友群：中共即将灭亡 “三退”可保平安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095925.md#1">拍动作片亲自上阵表演 汤姆克鲁斯保险费曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096725.md#1">传李玟留下10亿港币遗产 二姐透露分配方案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096965.md#1">“这剧有毒” 《乡村爱情》至少7名演员去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14097005.md#1">2PM俊昊访台湾尝芒果冰等美食 与许光汉合照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096663.md#1">谷村新司病逝 歌曲曾被邓丽君张学友等众星翻唱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086927.md#1">厨房海绵、砧板藏霉菌 微生物专家教你清理妙招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/12/n14094046.md#1">维生素D强骨防癌！欧瀚文：1黄金搭档最有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096338.md#1">你经常晚上醒来小便吗？ 医生教你如何改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/14/n14095151.md#1">12款世界经典蛋糕 甜品控都吃过了吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096603.md#1">剩余肥皂再利用 这些小妙招赶快学起来</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/19/n14098566.htm">跑步时用鼻子或嘴巴呼吸比较好？ 专家释疑</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405472.md#1">辛生得神示 改邪归正得福报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421729.md#1">【车评】本田首部电车 2025 Honda Prologue Elite</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421249.md#1">【新闻大家谈】川普达沃斯讲话：习主动致电</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420869.md#1">川普废止出生公民权行政令 被法官暂停执行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420134.md#1">赵薇主动公布离婚日期 已清空黄有龙公司股票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420047.md#1">40岁大陆女歌手申烨猝逝 知情者曝死因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420169.md#1">胡歌获官方披露任新职 大陆明星当官引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420499.md#1">这7个下班后的习惯 会让你在工作时分心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415455.md#1">眼霜对抗眼周老化？ 还需另外几招</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/19/n14098566.htm">跑步时应该用鼻子还是用嘴呼吸？ 专家释疑</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/19/n14098566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
